Publications menu option added + typos fixed

--- a/_assets/bib/refs.bib
+++ b/_assets/bib/refs.bib
@@ -886,7 +886,7 @@ XXXXXXXXXXXXXXX
 }
 
 @ARTICLE{AliBMQ07,
-  author =	 {Jose I. Aliaga and  Matthias Bollhöfer and Alberto F. Martin and Enrique S. Quintana-Ortí},
+  author =	 {Jose I. Aliaga and  Matthias Bollhoefer and Alberto F. Martin and Enrique S. Quintana-Ortí},
   title =	 {Parallelization of {M}ultilevel {P}reconditioners {C}onstructed from {I}nverse-{B}ased {ILU}s on {S}hared-{M}emory {M}ultiprocessors},
   journal =	 {{A}dvances in {P}arallel {C}omputing},
   volume  =      {15},
